# dev-sleuth-agent

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
.codex/environments/: environment.toml
bugagent/: __init__.py  api.py  api_jobs.py  api_progress.py  api_repositories.py  artifacts.py  cli.py  demo.py  domain.py  fix.py  fix_jobs.py  github.py  jira.py  jira_api.py  jira_gateway.py  publish_jobs.py  replay.py  scoring.py  silent_output.py  web.py
bugagent/agent/: __init__.py  client.py  orchestrator.py  repository.py
bugagent/sandbox/: __init__.py  docker.py  policy.py
containers/: README.md  python-pytest.Dockerfile
docs/: API.md  EVALUATION.md  HLD.md  LLD.md  SUBMISSION.md  architecture.md  demo-video-script.md  github-pr-workflow.md  progress.md  workflow.md
docs/workflows/: 01-investigation-workflow.md  02-sandbox-evidence-workflow.md  03-artifact-replay-workflow.md  04-evaluation-dashboard-workflow.md
evals/: frozen-cases.json
fixtures/sandbox_live/banklib/: account.py
fixtures/sandbox_live/tests/bugagent_generated/: test_close_empty_account.py
scripts/: check_live_model.py  run_agent_checkpoint.py  run_evaluation_checkpoint.py  run_live_investigation.py  run_sandbox_checkpoint.py  start_jira_demo.ps1  stop_jira_demo.ps1
tests/: test_agent.py  test_api.py  test_artifacts.py  test_cli.py  test_fix.py  test_fix_jobs.py  test_github.py  test_jira.py  test_jira_gateway.py  test_replay.py  test_sandbox.py  test_scoring.py  test_silent_output.py  test_web.py
ui/: app.js  index.html  styles.css
web/: app.js  index.html  styles.css
