[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bugagent"
version = "0.1.0"
description = "Evidence-first bug reproduction agent"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
bugagent = "bugagent.cli:main"
bugagent-api = "bugagent.api:main"

[project.optional-dependencies]
api = ["fastapi>=0.121,<1.0", "starlette>=0.40,<0.51", "uvicorn>=0.30,<1.0"]

[tool.setuptools.packages.find]
include = ["bugagent*"]
